# TacMap-warthunder

./: BUILD.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PUBLISH.md  QUICKSTART.md  README.md  SETUP_GUIDE_FOR_BINXIX.md  START_HERE.md  pyproject.toml  setup.py  tacmap_config.example.json
tacmap/: __init__.py  core.py  main.py  memory_reader.py  memory_scanner.py  scanner.py
tacmap/config/: default_config.json
